# cmd/api/api.go
@@ -25,25 +25,27 @@ func NewAPIServer(address string, db *sql.DB) *APIServer {
 
 }
 
-//	@title			GOLANG API
-//	@version		1.0
-//	@description	This is a simple golang backend API prepared for a task.
-
-//	@contact.name	API Support
-//	@contact.url	http://www.swagger.io/support
-//	@contact.email	support@swagger.io
-
-//	@license.name	Apache 2.0
-//	@license.url	http://www.apache.org/licenses/LICENSE-2.0.html
-//	@host			localhost:8080
-//	@BasePath		/api/v1
-
-//	@securityDefinitions.basic	BasicAuth
-
-//	@externalDocs.description	OpenAPI
-//	@externalDocs.url			https://swagger.io/resources/open-api/
+// @title                      GOLANG API
+// @description                This is a simple Golang backend API prepared for a task.
+// @version                    1.0
+//
+// @contact                    {
+//	  name: "API Support",
+//	  url: "http://www.example.com/support",
+//	  email: "support@example.com"
+//	}
+//
+// @license                    {
+//	  name: "Apache 2.0",
+//	  url: "http://www.apache.org/licenses/LICENSE-2.0.html"
+//	}
+//
+// @host                       localhost:8080
+// @BasePath                   /api/v1
+// @securityDefinitions.apiKey jwtKey
+// @in                         header
+// @name                       Authorization
 func (s *APIServer) Run() error {
-
 	limiter := rate.NewLimiter(5, 10)
 
 	router := mux.NewRouter()
