# services/task/routes.go
@@ -32,15 +32,15 @@ func NewHandler(store types.TaskStore) *Handler {
 
 // HandleGetTasks   get-tasks
 //
-//	@Summary		Get Tasks
-//	@Description	Get Tasks
-//	@Tags			Task
-//	@Produce		json
-//	@Success		200		{object}	types.Task
-//	@Param			status	query		string	false	"Task Status"	Enums(pending, in_progress, completed)
-//	@Failure		400		{object}	types.ErrorResponse
-//	@Failure		500		{object}	types.ErrorResponse
-//	@Router			/task [get]
+// @Summary     Get Tasks
+// @Description Get Tasks
+// @Tags        Task
+// @Produce     json
+// @Success     200    {object} types.Task
+// @Param       status query    string false "Task Status" Enums(pending, in_progress, completed)
+// @Failure     400    {object} types.ErrorResponse
+// @Failure     500    {object} types.ErrorResponse
+// @Router      /task [get]
 func (h *Handler) handleGetTasks(w http.ResponseWriter, r *http.Request) {
 	statusStr := r.URL.Query().Get("status")
 
@@ -71,16 +71,16 @@ func (h *Handler) handleGetTasks(w http.ResponseWriter, r *http.Request) {
 
 // HandleGetTask   Get Task by ID
 //
-//	@Summary		Get Task by ID
-//	@Description	Get Task by ID
-//	@Tags			Task
-//	@Accept			json
-//	@Produce		json
-//	@Param			id	path		int	true	"Task ID"
-//	@Success		200	{object}	string
-//	@Failure		400	{object}	types.ErrorResponse
-//	@Failure		500	{object}	types.ErrorResponse
-//	@Router			/task/{id} [get]
+// @Summary     Get Task by ID
+// @Description Get Task by ID
+// @Tags        Task
+// @Accept      json
+// @Produce     json
+// @Param       id  path     int true "Task ID"
+// @Success     200 {object} string
+// @Failure     400 {object} types.ErrorResponse
+// @Failure     500 {object} types.ErrorResponse
+// @Router      /task/{id} [get]
 func (h *Handler) handleGetTask(w http.ResponseWriter, r *http.Request) {
 	vars := mux.Vars(r)
 	taskIDStr, ok := vars["id"]
@@ -106,16 +106,16 @@ func (h *Handler) handleGetTask(w http.ResponseWriter, r *http.Request) {
 
 // HandleCreateTask   create-task
 //
-//	@Summary		Create task
-//	@Description	Create Task
-//	@Tags			Task
-//	@Accept			json
-//	@Produce		json
-//	@Param			CreateTaskPayload	body		types.CreateTaskPayload	true	"create task"
-//	@Success		201					{object}	string
-//	@Failure		400					{object}	types.ErrorResponse
-//	@Failure		500					{object}	types.ErrorResponse
-//	@Router			/task [post]
+// @Summary     Create task
+// @Description Create Task
+// @Tags        Task
+// @Accept      json
+// @Produce     json
+// @Param       CreateTaskPayload body     types.CreateTaskPayload true "create task"
+// @Success     201               {object} string
+// @Failure     400               {object} types.ErrorResponse
+// @Failure     500               {object} types.ErrorResponse
+// @Router      /task [post]
 func (h *Handler) handleCreateTask(w http.ResponseWriter, r *http.Request) {
 	var payload types.CreateTaskPayload
 	err := utils.ParseJSON(r, &payload)
@@ -146,21 +146,22 @@ func (h *Handler) handleCreateTask(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	utils.WriteJSON(w, http.StatusCreated, map[string]string{"message": "User created successfully"})
+	utils.WriteJSON(w, http.StatusCreated, map[string]string{"message": "Task created successfully"})
 }
 
 // HandleUpdateTask   update-task
 //
-//	@Summary		Update Task
-//	@Description	Update Task
-//	@Tags			Task
-//	@Accept			json
-//	@Produce		json
-//	@Param			id	path		int	true	"Task ID"
-//	@Success		200	{object}	string
-//	@Failure		400	{object}	types.ErrorResponse
-//	@Failure		500	{object}	types.ErrorResponse
-//	@Router			/task/{id} [put]
+// @Summary     Update Task
+// @Description Update Task
+// @Tags        Task
+// @Accept      json
+// @Produce     json
+// @Param       id                path     int                     true "Task ID"
+// @Param       UpdateTaskPayload body     types.UpdateTaskPayload true "Task updates"
+// @Success     200               {object} string
+// @Failure     400               {object} types.ErrorResponse
+// @Failure     500               {object} types.ErrorResponse
+// @Router      /task/{id} [put]
 func (h *Handler) handleUpdateTask(w http.ResponseWriter, r *http.Request) {
 	vars := mux.Vars(r)
 	taskIDStr, ok := vars["id"]
@@ -181,7 +182,7 @@ func (h *Handler) handleUpdateTask(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 	log.Println("Parsing JSON request body into updates struct")
-	var updates types.Task
+	var updates types.UpdateTaskPayload
 	err = utils.ParseJSON(r, &updates)
 	if err != nil {
 		utils.WriteError(w, http.StatusBadRequest, err)
@@ -201,16 +202,16 @@ func (h *Handler) handleUpdateTask(w http.ResponseWriter, r *http.Request) {
 
 // HandleDeleteTask   delete-task
 //
-//	@Summary		Delete Task
-//	@Description	Delete Task
-//	@Tags			Task
-//	@Accept			json
-//	@Produce		json
-//	@Param			id	path		int	true	"Task ID"
-//	@Success		200	{object}	string
-//	@Failure		400	{object}	types.ErrorResponse
-//	@Failure		500	{object}	types.ErrorResponse
-//	@Router			/task/{id} [delete]
+// @Summary     Delete Task
+// @Description Delete Task
+// @Tags        Task
+// @Accept      json
+// @Produce     json
+// @Param       id  path     int true "Task ID"
+// @Success     200 {object} string
+// @Failure     400 {object} types.ErrorResponse
+// @Failure     500 {object} types.ErrorResponse
+// @Router      /task/{id} [delete]
 func (h *Handler) handleDeleteTask(w http.ResponseWriter, r *http.Request) {
 	vars := mux.Vars(r)
 	taskIDStr, ok := vars["id"]
@@ -242,19 +243,19 @@ func (h *Handler) handleDeleteTask(w http.ResponseWriter, r *http.Request) {
 
 // HandleProgressTask   progress-task
 //
-//	@Summary		Progress Task
-//	@Description	Progress Task one further between stages, utilizes mutex to prevent concurrent progress
-//	@Tags			Task
-//	@Accept			json
-//	@Produce		json
-//	@Param			id	path		int	true	"Task ID"
-//	@Success		200	{object}	string
-//	@Failure		400	{object}	types.ErrorResponse
-//	@Failure		500	{object}	types.ErrorResponse
-//	@Router			/task/{id} [patch]
+// @Summary     Progress Task
+// @Description Progress Task one further between stages, utilizes mutex to prevent concurrent progress
+// @Tags        Task
+// @Accept      json
+// @Produce     json
+// @Param       id  path     int true "Task ID"
+// @Success     200 {object} string
+// @Failure     400 {object} types.ErrorResponse
+// @Failure     500 {object} types.ErrorResponse
+// @Router      /task/{id} [patch]
 func (h *Handler) handleProgressTask(w http.ResponseWriter, r *http.Request) {
 	locked := h.mu.TryLock()
-	if locked {
+	if !locked {
 		utils.WriteError(w, http.StatusInternalServerError, fmt.Errorf("another process is already in progress, please try again later"))
 		return
 	}
@@ -290,15 +291,15 @@ func (h *Handler) handleProgressTask(w http.ResponseWriter, r *http.Request) {
 
 // HandleConcurrency   concurrency-demo
 //
-//	@Summary		Concurrency Demo
-//	@Description	Endpoint to demonstrate queued processing, Check logs for processing status and prometheus metrics in `api/v1/metrics` for queue length and tasks processed
-//	@Tags			Task
-//	@Accept			json
-//	@Produce		json
-//	@Success		200	{object}	string
-//	@Failure		400	{object}	types.ErrorResponse
-//	@Failure		500	{object}	types.ErrorResponse
-//	@Router			/concurrency [post]
+// @Summary     Concurrency Demo
+// @Description Endpoint to demonstrate queued processing, Check logs for processing status and prometheus metrics in `api/v1/metrics` for queue length and tasks processed
+// @Tags        Task
+// @Accept      json
+// @Produce     json
+// @Success     200 {object} string
+// @Failure     400 {object} types.ErrorResponse
+// @Failure     500 {object} types.ErrorResponse
+// @Router      /task/concurrency [post]
 func (h *Handler) handleConcurrencyDemo(w http.ResponseWriter, r *http.Request) {
 	for i := 1; i <= 4; i++ {
 		// add queued task to prometheus
